--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/jail-loaf.html">Jail Loaf</a>
+    <ul>
+      <li><a href="recipes/jail-loaf.html">Jail Loaf</a></li>
+      <li><a href="recipes/morning-delight.html">Morning Delight</a></li>
+      <li><a href="recipes/chili-mac.html">Fire Chili Mac</a></li>
+    </ul>
 </body>
 </html>
